--- a/blog/style.css
+++ b/blog/style.css
@@ -1,2 +1,3 @@
+@font-face{src: url(type/LeagueGothic-CondensedRegular.otf);font-family: "League-Gothic";}
 *{font-family:sans-serif;}
-h2{text-transform: uppercase;font-family: arial;letter-spacing: -1px;line-height: 2px;}
+h2{text-transform: uppercase;font-family: "League-Gothic";}
