--- a/blog/style.css
+++ b/blog/style.css
@@ -1,11 +1,18 @@
 @font-face {
   font-family: 'LeagueGothic';
+  src: url('type/LeagueGothic-Regular-webfont.eot') format('embedded-opentype'),
+    url('type/LeagueGothic-Regular-webfont.woff') format('woff'),
+    url('type/LeagueGothic-Regular-webfont.ttf') format('truetype'),
+    url('type/LeagueGothic-Regular-webfont.svg') format('svg');
+}
+/*@font-face {
+  font-family: 'LeagueGothic';
   src: url('type/LeagueGothic-Regular-webfont.eot');
   src: url('type/LeagueGothic-Regular-webfont.eot?#iefix') format('embedded-opentype'),
     url('type/LeagueGothic-Regular-webfont.woff') format('woff'),
     url('type/LeagueGothic-Regular-webfont.ttf') format('truetype'),
     url('type/LeagueGothic-Regular-webfont.svg#LeagueGothic') format('svg');
-}
+}*/
 
 /*applies to entire site*/
 
@@ -65,7 +72,7 @@ a:visited {text-decoration: none;}
 
 	h2{text-transform: 
 		uppercase;
-		font-family: "LeagueGothic";
+		font-family: 'LeagueGothic';
 		padding: 0px;
 		margin: 0px;
 		}
