--- a/blog/style.css
+++ b/blog/style.css
@@ -70,7 +70,8 @@ a:visited {text-decoration: none;}
 	h6{padding: 0px;
 		margin: 0px;}
 
-	h2{font-family: 'LeagueGothic';
+	h2{text-transform: uppercase;
+		font-family: 'LeagueGothic';
 		padding: 0px;
 		margin: 0px;
 		}
