--- a/blog/style.css
+++ b/blog/style.css
@@ -72,6 +72,7 @@ a:visited {text-decoration: none;}
 
 	h2{text-transform: uppercase;
 		font-family: 'LeagueGothic';
+		font-style: normal;
 		padding: 0px;
 		margin: 0px;
 		}
