--- a/coffee/style.css
+++ b/coffee/style.css
@@ -39,8 +39,8 @@ header{background: url('images/beans.jpg');}
 
 #l-column {
 	float: left;
-	width: 400px;
-	margin-left: 50px;
+	width: 47%;
+	margin-left: 1%
 }
 
 #l-column h2{
@@ -53,8 +53,9 @@ header{background: url('images/beans.jpg');}
 
 #r-column {
 	float: right;
-	width: 400px;
-	margin:auto;
+	width: 47%;
+	margin-left: 4%;
+	margin-right: 1%;
 }
 
 #r-column h2{
