--- a/blog/style.css
+++ b/blog/style.css
@@ -15,6 +15,10 @@
 }*/
 
 /*applies to entire site*/
+*body{
+	padding: 0px;
+	margin: 0px;
+}
 
 *{font-family:sans-serif;}
 
@@ -52,10 +56,10 @@ a:visited {text-decoration: none;}
 		}
 
 		#side{
-					position: fixed;
+					float:left;
 					margin-top: 30px;
-					left: -10px;
-					width: 250px;
+					left: 2%;
+					width: 28%;
 					}
 
 
@@ -63,9 +67,11 @@ a:visited {text-decoration: none;}
 /*content*/
 
 #content {
+	float: right;
 	margin-top: 40px;
-	margin-left: 325px;
-		margin-right: 20px;
+	width: 63%;
+	margin-left: 5%;
+		margin-right: 2%;
 }
 	h6{padding: 0px;
 		margin: 0px;}
