--- a/coffee/style.css
+++ b/coffee/style.css
@@ -2,6 +2,15 @@
 h1 a{font-family: sans-serif;color:#FFFFFF;}
 h2{font-family: sans-serif;color:#2A1506;}
 
+*body{
+	padding: 0px;
+	margin: 0px;
+}
+
+html{
+	height: 100%;
+}
+
 /*header and logo area*/
 
 header{background: url('images/beans.jpg');}
@@ -15,7 +24,7 @@ header{background: url('images/beans.jpg');}
 
 	#top-menu{
 		background-color: #2A1506;
-		word-spacing: 2em;
+		word-spacing: 4em;
 		position: relative;
 		bottom: 15px;
 	}
@@ -39,8 +48,8 @@ header{background: url('images/beans.jpg');}
 
 #l-column {
 	float: left;
-	width: 45%;
-	margin-left: 3%
+	width: 41%;
+	margin-left: 7%
 }
 
 
@@ -55,9 +64,9 @@ header{background: url('images/beans.jpg');}
 
 #r-column {
 	float: right;
-	width: 45%;
+	width: 41%;
 	margin-left: 4%;
-	margin-right: 3%;
+	margin-right: 7%;
 }
 
 
@@ -82,6 +91,10 @@ header{background: url('images/beans.jpg');}
 	}
 }
 
+#frontinfo{
+	min-height: 100%;
+	height: 100%;
+}
 
 /*footer*/
 #site-footer{
