--- a/blog/style.css
+++ b/blog/style.css
@@ -1,10 +1,10 @@
-@font-face {
+/*@font-face {
   font-family: 'LeagueGothic';
   src: url('/type/LeagueGothic-Regular-webfont.eot'),
     url('/type/LeagueGothic-Regular-webfont.woff'),
     url('/type/LeagueGothic-Regular-webfont.ttf'),
     url('/type/LeagueGothic-Regular-webfont.svg');
-}
+}*/
 /*@font-face {
   font-family: 'LeagueGothic';
   src: url('type/LeagueGothic-Regular-webfont.eot');
