--- a/local/style.css
+++ b/local/style.css
@@ -25,4 +25,15 @@
 
 .sl-slide{
 	z-index: 1;
-}/*
+}*/
+
+/*Applies to entire site*/
+
+html{background-color:#E0E0E0;}
+
+.H1{font-size: 2em;}
+
+.H2{font-size:1.5em;}
+
+.text{font-size: 12px;}
+
