--- a/slider/css/custom.css
+++ b/slider/css/custom.css
@@ -1,97 +1,65 @@
-/*Slider*/
-.sl-slider-wrapper {
-	width: 800px;
-	height: 400px;
+.demo-1 .sl-slider-wrapper {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.demo-2 .sl-slider-wrapper {
+	width: 100%;
+	height: 600px;
+	overflow: hidden;
+	position: relative;
+}
+
+.demo-2 .sl-slider h2,
+.demo-2 .sl-slider blockquote {
+	padding: 100px 30px 10px 30px;
+	width: 80%;
+	max-width: 960px;
+	color: #fff;
 	margin: 0 auto;
 	position: relative;
-	overflow: hidden;
+	z-index: 100;
 }
 
-.sl-slider {
-	position: absolute;
-	top: 0;
-	left: 0;
+.demo-2 .sl-slider h2 {
+	font-size: 100px;
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
 }
 
-.sl-slide,
-.sl-slides-wrapper,
-.sl-slide-inner {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-} 
-
-.sl-slide{
-	z-index: 1;
+.demo-2 .sl-slider blockquote {
+	font-size: 28px;
+	padding-top: 10px;
+	font-weight: 300;
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
 }
 
-/*duplicate parts/slices*/
+.demo-2 .sl-slider blockquote cite {
+	font-size: 16px;
+	font-weight: 700;
+	font-style: normal;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	padding-top: 30px;
+	display: inline-block;
+}
 
-.sl-content-slice{
-	overflow: hidden;
-	position: absolute;
+.demo-2 .bg-img {
+	padding: 200px;
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
 	box-sizing: content-box;
-	background: #fff;
-}
-
-/* Horizontal slice */
-
-.sl-slide-horizontal .sl-content-slice {
-	width: 100%;
-	height: 50%;
-	left: -200px;
-	-webkit-transform: translateY(0%) scale(1);
-	-moz-transform: translateY(0%) scale(1);
-	-o-transform: translateY(0%) scale(1);
-	-ms-transform: translateY(0%) scale(1);
-	transform: translateY(0%) scale(1);
-}
-
-.sl-slide-horizontal .sl-content-slice:first-child {
-	top: -200px;
-	padding: 200px 200px 0px 200px;
-}
-
-.sl-slide-horizontal .sl-content-slice:nth-child(2) {
-	top: 50%;
-	padding: 0px 200px 200px 200px;
-}
-
-/* Vertical slice */
-
-.sl-slide-vertical .sl-content-slice {
-	width: 50%;
-	height: 100%;
-	top: -200px;
-	-webkit-transform: translateX(0%) scale(1);
-	-moz-transform: translateX(0%) scale(1);
-	-o-transform: translateX(0%) scale(1);
-	-ms-transform: translateX(0%) scale(1);
-	transform: translateX(0%) scale(1);
-}
-
-.sl-slide-vertical .sl-content-slice:first-child {
-	left: -200px;
-	padding: 200px 0px 200px 200px;
-}
-
-.sl-slide-vertical .sl-content-slice:nth-child(2) {
-	left: 50%;
-	padding: 200px 200px 200px 0px;
-}
-
-/* Content wrapper */
-/* Width and height is set dynamically */
-.sl-content-wrapper {
 	position: absolute;
-}
-
-.sl-content {
+	top: -200px;
+	left: -200px;
 	width: 100%;
 	height: 100%;
-	background: #fff;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	background-position: center center;
 }
 
 /* Custom navigation arrows */
@@ -158,6 +126,28 @@
 		inset 0 1px 1px rgba(0,0,0,0.1);
 }
 
+.demo-2 .nav-dots span {
+	background: rgba(150,150,150,0.1);
+	margin: 6px;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	transition: all 0.2s;
+	box-shadow: 
+		0 1px 1px rgba(255,255,255,0.4), 
+		inset 0 1px 1px rgba(0,0,0,0.1),
+		0 0 0 2px rgba(255,255,255,0.5);
+}
+
+.demo-2 .nav-dots span.nav-dot-current,
+.demo-2 .nav-dots span:hover {
+	box-shadow: 
+		0 1px 1px rgba(255,255,255,0.4), 
+		inset 0 1px 1px rgba(0,0,0,0.1),
+		0 0 0 5px rgba(255,255,255,0.5);
+}
+
 .nav-dots span.nav-dot-current:after {
 	content: "";
 	position: absolute;
@@ -167,10 +157,11 @@
 	left: 3px;
 	border-radius: 50%;
 	background: rgba(255,255,255,0.8);
+}
 
 /* Content elements */
 
-.deco {
+.demo-1 .deco {
 	width: 260px;
 	height: 260px;
 	border: 2px dashed #ddd;
@@ -182,9 +173,9 @@
 	margin: 0 0 0 -130px;
 }
 
-[data-icon]:after {
+.demo-1 [data-icon]:after {
     content: attr(data-icon);
-    font-family: 'arial';
+    font-family: 'AnimalsNormal';
 	color: #999;
 	text-shadow: 0 0 1px #999;
 	position: absolute;
@@ -200,7 +191,7 @@
 	border-radius: 50%;
 }
 
-.sl-slide h2 {
+.demo-1 .sl-slide h2 {
 	color: #000;
 	text-shadow: 0 0 1px #000;
 	padding: 20px;
@@ -217,84 +208,167 @@
 	margin: 0 0 -120px 0;
 }
 
+.demo-1 .sl-slide blockquote {
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	left: 0;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 20px;
+	height: 70px;
+	color: #8b8b8b;
+	z-index: 2;
+	bottom: 50%;
+	margin: 0 0 -200px 0;
+	padding: 0;
+}
+
+.demo-1 .sl-slide blockquote p{
+	margin: 0 auto;
+	width: 60%;
+	max-width: 400px;
+	position: relative;
+}
+
+.demo-1 .sl-slide blockquote p:before {
+	color: #f0f0f0;
+	color: rgba(244,244,244,0.65);
+	font-family: "Bookman Old Style", Bookman, Garamond, serif;
+	position: absolute;
+	line-height: 60px;
+	width: 75px;
+	height: 75px;
+	font-size: 200px;
+	z-index: -1;
+	left: -80px;
+	top: 35px;
+	content: '\201C';
+}
+
+.demo-1 .sl-slide blockquote cite {
+	font-size: 10px;
+	padding-top: 10px;
+	display: inline-block;
+	font-style: normal;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+}
+
 /* Custom background colors for slides in first demo */
 
 /* First Slide */
-.bg-1 .sl-slide-inner,
-.bg-1 .sl-content-slice {
+.demo-1 .bg-1 .sl-slide-inner,
+.demo-1 .bg-1 .sl-content-slice {
 	background: #fff;
 }
 
 /* Second Slide */
-.bg-2 .sl-slide-inner,
-.bg-2 .sl-content-slice {
+.demo-1 .bg-2 .sl-slide-inner,
+.demo-1 .bg-2 .sl-content-slice {
 	background: #000;
 }
 
-.bg-2 [data-icon]:after,
-.bg-2 h2 {
+.demo-1 .bg-2 [data-icon]:after,
+.demo-1 .bg-2 h2 {
 	color: #fff;
 }
 
+.demo-1 .bg-2 blockquote:before {
+	color: #222;
+}
+
 /* Third Slide */
-.bg-3 .sl-slide-inner,
-.bg-3 .sl-content-slice {
+.demo-1 .bg-3 .sl-slide-inner,
+.demo-1 .bg-3 .sl-content-slice {
 	background: #db84ad;
 }
 
-.bg-3 .deco {
+.demo-1 .bg-3 .deco {
 	border-color: #fff;
 	border-color: rgba(255,255,255,0.5);
 }
 
-.bg-3 [data-icon]:after {
+.demo-1 .bg-3 [data-icon]:after {
 	color: #fff;
 	text-shadow: 0 0 1px #fff;
 	box-shadow: inset 0 0 0 10px #b55381;
 }
 
-.bg-3 h2{
+.demo-1 .bg-3 h2,
+.demo-1 .bg-3 blockquote{
 	color: #fff;
 	text-shadow: 0px 1px 1px rgba(0,0,0,0.3);
 }
 
+.demo-1 .bg-3 blockquote:before {
+	color: #c46c96;
+}
+
 /* Forth Slide */
-.bg-4 .sl-slide-inner,
-.bg-4 .sl-content-slice {
+.demo-1 .bg-4 .sl-slide-inner,
+.demo-1 .bg-4 .sl-content-slice {
 	background: #5bc2ce;
 }
 
-.bg-4 .deco {
+.demo-1 .bg-4 .deco {
 	border-color: #379eaa;
 }
 
-.bg-4 [data-icon]:after {
+.demo-1 .bg-4 [data-icon]:after {
 	text-shadow: 0 0 1px #277d87;
 	color: #277d87;
 }
 
-.bg-4 h2,{
+.demo-1 .bg-4 h2,
+.demo-1 .bg-4 blockquote{
 	color: #fff;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 }
 
+.demo-1 .bg-4 blockquote:before {
+	color: #379eaa;
+}
+
 /* Fifth Slide */
-.bg-5 .sl-slide-inner, .bg-5 .sl-content-slice {
+.demo-1 .bg-5 .sl-slide-inner,
+.demo-1 .bg-5 .sl-content-slice {
 	background: #ffeb41;
 }
 
-.bg-5 .deco {
+.demo-1 .bg-5 .deco {
 	border-color: #ECD82C;
 }
 
-.bg-5 .deco:after {
+.demo-1 .bg-5 .deco:after {
 	color: #000;
 	text-shadow: 0 0 1px #000;
 }
 
-.bg-5 h2,{
+.demo-1 .bg-5 h2,
+.demo-1 .bg-5 blockquote{
 	color: #000;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+}
+
+.demo-1 .bg-5 blockquote:before {
+	color: #ecd82c;
+}
+
+.demo-2 .bg-img-1 {
+	background-image: url(../images/1.jpg);
+}
+.demo-2 .bg-img-2 {
+	background-image: url(../images/2.jpg);
+}
+.demo-2 .bg-img-3 {
+	background-image: url(../images/3.jpg);
+}
+.demo-2 .bg-img-4 {
+	background-image: url(../images/4.jpg);
+}
+.demo-2 .bg-img-5 {
+	background-image: url(../images/5.jpg);
 }
 
 /* Animations for content elements */
@@ -313,7 +387,13 @@
 	-ms-animation: moveUp 1s ease-in-out both;
 	animation: moveUp 1s ease-in-out both;
 }
-
+.sl-trans-elems blockquote{
+	-webkit-animation: fadeIn 0.5s linear 0.5s both;
+	-moz-animation: fadeIn 0.5s linear 0.5s both;
+	-o-animation: fadeIn 0.5s linear 0.5s both;
+	-ms-animation: fadeIn 0.5s linear 0.5s both;
+	animation: fadeIn 0.5s linear 0.5s both;
+}
 .sl-trans-back-elems .deco{
 	-webkit-animation: scaleDown 1s ease-in-out both;
 	-moz-animation: scaleDown 1s ease-in-out both;
@@ -328,7 +408,13 @@
 	-ms-animation: fadeOut 1s ease-in-out both;
 	animation: fadeOut 1s ease-in-out both;
 }
-
+.sl-trans-back-elems blockquote{
+	-webkit-animation: fadeOut 1s linear both;
+	-moz-animation: fadeOut 1s linear both;
+	-o-animation: fadeOut 1s linear both;
+	-ms-animation: fadeOut 1s linear both;
+	animation: fadeOut 1s linear both;
+}
 @-webkit-keyframes roll{
 	0% {-webkit-transform: translateX(500px) rotate(360deg);}
 	100% {-webkit-transform: translateX(0px) rotate(0deg);}
@@ -429,64 +515,55 @@
 	0% {opacity: 1;}
 	100% {opacity: 0;}
 }
-/*Applies to entire site*/
 
-html{background-color:#E0E0E0;}
 
-.H1{
-	font-size: 1.25em;
-	font-family: arial;
-}
+/* Media Queries for custom slider */
 
-.H2{
-	font-size:1.15em;
-	font-family: arial;
-}
+@media screen and (max-width: 660px) {
+	.demo-1 .deco {
+		width: 130px;
+		height: 130px;
+		margin-left: -65px;
+		margin-bottom: 50px;
+	}
 
-.text{
-	font-size: 12px;
-}
+	.demo-1 [data-icon]:after {
+		width: 110px;
+		height: 110px;
+		line-height: 110px;
+		font-size: 40px;
+		margin: -55px 0 0 -55px;
+	}
 
-nav li a{color: black;}
-a:link {text-decoration: none;}
-a:visited {text-decoration: none;}
+	.demo-1 .sl-slide blockquote {
+		margin-bottom: -120px;
+	}
 
-/*header*/
+	.demo-1 .sl-slide h2 {
+		line-height: 22px;
+		font-size: 18px;
+		margin-bottom: -40px;
+		letter-spacing: 8px;
+	}
 
-#header{
-	max-width: 100%;
-}
+	.demo-1 .sl-slide blockquote p:before {
+		line-height: 10px;
+		width: 40px;
+		height: 40px;
+		font-size: 120px;
+		left: -45px;
+	}
 
-#logo-area{
-	max-width: 40%;
-	margin: auto;
-}
+	.demo-2 .sl-slider-wrapper {
+		height: 500px;
+	}
 
-#top-menu li{
-	display: inline-block;
-}
+	.demo-2 .sl-slider h2 {
+		font-size: 36px;
+	}
 
-#top-menu{
-	margin: auto;
-	max-width: 80%;
-}
+	.demo-2 .sl-slider blockquote {
+		font-size: 16px;
+	}
 
-/*footer*/
-
-#site-footer{
-	max-width: 100%;
-}
-
-#foot-address{
-	margin: auto;
-	max-width: 50%;
-}
-
-#social-media{
-	max-width: 50%;
-	margin: auto;
-}
-
-#social-media li{
-	display: inline-block;
 }
