--- a/slider/css/custom.css
+++ b/slider/css/custom.css
@@ -175,7 +175,7 @@
 
 .demo-1 [data-icon]:after {
     content: attr(data-icon);
-    font-family: 'AnimalsNormal';
+    font-family: 'arial';
 	color: #999;
 	text-shadow: 0 0 1px #999;
 	position: absolute;
