--- a/slider/css/custom.css
+++ b/slider/css/custom.css
@@ -173,6 +173,24 @@
 	margin: 0 0 0 -130px;
 }
 
+.demo-1 .decos {
+	width: 260px;
+	height: 260px;
+	border: 2px dashed #ddd;
+	border: 2px dashed rgba(150,150,150,0.4);
+	border-radius: 50%;
+	position: absolute;
+	bottom: 50%;
+	left: 50%;
+	margin: 0 0 0 -130px;
+}
+
+.coffee{
+	max-height: 50%;
+	max-width: 50%;
+	margin: 25% 25% 25% 25%;
+}
+
 .demo-1 [img]:after {
     content: attr(img);
     font-family: 'arial';
